--- a/central-tracking-service/package.json
+++ b/central-tracking-service/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "1.13.3",
-    "@grpc/proto-loader": "0.7.15"
+    "@grpc/proto-loader": "0.7.15",
+    "@prisma/client": "^6.8.2",
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
     "@types/node": "22.15.20",
